objects/My_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Renewal_Date__c</fullName>
        <formula>ADDMONTHS(CreatedDate,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pan_Number__c</fullName>
        <label>Pan Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>My Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Balance__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Mobile_Number__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>My Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyAccounts</pluralLabel>
    <recordTypes>
        <fullName>Company_Account</fullName>
        <active>true</active>
        <label>Company Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Account</fullName>
        <active>true</active>
        <label>Individual Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Type_Should_Be_Required</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( IFSC_Code__c  &lt;&gt; null)</errorConditionFormula>
        <errorDisplayField>IFSC_Code__c</errorDisplayField>
        <errorMessage>Please enter a value for IFSC Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Balance_Cannot_Be_Negative</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Balance__c  &gt; 0)</errorConditionFormula>
        <errorMessage>Balance Must Be Greater Than Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Should_Be_Gmail</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(CONTAINS(Email__c, &apos;gmail&apos;))</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Email must contain gmail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>check_IFSC_Code</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX(IFSC_Code__c ,&apos;^(?=.*[a-zA-Z])(?=.*[0-9])[A-Za-z0-9]+$&apos;))</errorConditionFormula>
        <errorDisplayField>IFSC_Code__c</errorDisplayField>
        <errorMessage>Please enter a alphanumeric value without any special characters</errorMessage>
    </validationRules>
</CustomObject>